example/nginx-deployment-poststart.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hook-deployment
  namespace: test
  labels:
    app: nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.13.12
        ports:
        - containerPort: 80
        lifecycle:
          postStart:
            exec:
              command: ["/bin/bash","-c","echo devopsedu > /tmp/health"]
